<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vending Machine</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lista_cliente">Clientes</string>
    <string name="title_activity_lista_maquina">ListaMaquinaActivity</string>
    <string name="title_activity_operacoes">Operações</string>
    <string name="title_activity_abrir_maquina">Abrir máquina</string>
    <string name="title_activity_fechar_maquina">FecharMaquinaActivity</string>
    <string name="produto">Produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="valorUnitario">Valor unitário:</string>
    <string name="total">Total</string>
    <string name="emitirDespesa">Emitir despesa</string>
    <string name="fecharMaquina">Fechar Máquina</string>
    <string name="maquina">Máquina</string>
    <string name="valor_vendido">Valor venda:</string>
    <string name="valor_retirado">Valor retirado:</string>
    <string name="descricao">Descrição</string>
    <string name="tipo_da_maquina">Tipo da máquina</string>
    <string name="codigo_da_maquina">Codigo da máquina</string>
    <string name="produtos_alocados">Produtos alocados</string>
    <string name="title_activity_manutencao">Manutenção</string>
    <string name="hello_world">Hello world!</string>
    <string name="valorTotal">Valor total:</string>
    <string name="title_activity_alocar_maquina">Alocar_Maquina</string>
    <string name="title_activity_lista_maquinas_pendentes">Maquinas</string>
    <string name="title_activity_incluir_produto">IncluirProduto</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_adiciona_produto">Adicionar Produto</string>

</resources>
