<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.vendingmachine.activity.ManutencaoActivity" >

    <TextView
        android:id="@+id/textCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Cliente"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textNomeCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCliente"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="Nome do cliente"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#808080" />

    <TextView
        android:id="@+id/textEnderecoCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNomeCliente"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="Endereco do cliente"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#808080" />

    <TextView
        android:id="@+id/textMaquina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEnderecoCliente"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/maquina"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/descricaoMaquina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMaquina"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/codigo_da_maquina"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#808080" />

    <TextView
        android:id="@+id/tipoMaquina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descricaoMaquina"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tipo_da_maquina"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#808080" />

    <TextView
        android:id="@+id/textMotivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipoMaquina"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Motivo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerMotivos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textMotivo"
        android:layout_alignLeft="@+id/textMotivo" 
        android:layout_below="@+id/textMotivo"
        />

    <Button
        android:id="@+id/emitirSolicitacaoManutencao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/botao_operacoes"
        android:text="Informar Recolhimento" />

</RelativeLayout>